--- a/style.css
+++ b/style.css
@@ -1,13 +1,32 @@
+* {
+  margin: 0;
+}
+
 .header {
   display: flex;
   background-color: rgb(50, 167, 145);
+  align-items: center;
   justify-content: space-between;
+  padding: 10px;
 }
+
+.trybewarts-header-logo {
+  width: 70px;
+}
+
+#trybewarts-header-title {
+  color: white;
+} 
 
 .trybewarts-login {
   display: flex;
 }
 
-/* #trybewarts-header-title {
+main {
+  display: flex;
+}
 
-} */
+#evaluation-form {
+  display: flex;
+  width: 675px;
+}
