--- a/style.css
+++ b/style.css
@@ -11,16 +11,23 @@
 }
 
 .trybewarts-header-logo {
-  width: 70px;
+  height: 50px;
 }
 
 #trybewarts-header-title {
   color: white;
-} 
+}
 
 .trybewarts-login {
   display: flex;
 }
+
+.trybewarts-login input, button {
+  margin-left: 10px;
+  height: 30px;
+  border-radius: 5px;
+}
+
 
 main {
   display: flex;
@@ -30,4 +37,15 @@ main {
   display: flex;
   width: 675px;
   flex-direction: column;
+  padding: 50px;
+
+}
+
+#evaluation-form h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#trybewarts-forms-logo {
+  height: 500px;
 }
